--- a/package.json
+++ b/package.json
@@ -12,70 +12,37 @@
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
-    "dist",
-    "graphiqlExplorer.js",
-    "graphiqlExplorer.min.js",
-    "README.md",
-    "LICENSE"
+    "dist"
   ],
-  "browserify-shim": {
-    "react": "global:React",
-    "react-dom": "global:ReactDOM"
-  },
-  "prettier": {
-    "singleQuote": true,
-    "trailingComma": "all",
-    "bracketSpacing": false,
-    "jsxBracketSameLine": true
-  },
-  "lint-staged": {
-    "*.js": [
-      "prettier --jsx-bracket-same-line --single-quote --trailing-comma=all --write",
-      "git add"
-    ]
-  },
-  "peerDependencies": {
-    "graphql": "^0.6.0 || ^0.7.0 || ^0.8.0-b || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0 || ^16.0.0",
-    "react": "^15.6.0 || ^16.0.0",
-    "react-dom": "^15.6.0 || ^16.0.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "^7.0.0",
-    "babel-cli": "6.24.1",
-    "babel-eslint": "7.2.3",
-    "babel-plugin-syntax-async-functions": "6.13.0",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.22.0",
-    "babel-plugin-transform-regenerator": "6.24.1",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babelify": "7.3.0",
-    "browserify": "^14.4.0",
-    "browserify-shim": "3.8.14",
-    "chai": "4.1.1",
-    "chai-subset": "1.5.0",
-    "eslint": "4.4.1",
-    "eslint-config-prettier": "^2.3.0",
-    "eslint-plugin-babel": "4.1.2",
-    "eslint-plugin-react": "7.2.0",
-    "flow-bin": "^0.77.0",
-    "graphql": "14.0.2",
-    "husky": "^0.14.0",
-    "jsdom": "11.1.0",
-    "lint-staged": "^4.0.0",
-    "postcss-cli": "4.1.0",
-    "prettier": "^1.4.4",
-    "prop-types": "15.5.8",
-    "react": "15.5.4",
-    "react-dom": "15.5.4",
-    "react-test-renderer": "15.6.1",
-    "uglify-js": "^3.0.20",
-    "uglifyify": "^4.0.2",
-    "watchify": "3.9.0"
-  },
   "scripts": {
     "build": "bash ./resources/build.sh",
     "check": "flow check",
     "test": "npm run check && npm run build"
+  },
+  "prettier": {
+    "arrowParens": "avoid",
+    "bracketSpacing": false,
+    "jsxBracketSameLine": true,
+    "singleQuote": true,
+    "trailingComma": "all"
+  },
+  "peerDependencies": {
+    "graphql": "^16.6.0",
+    "react": "^18.2.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "flow-bin": "^0.77.0",
+    "graphql": "^16.6.0",
+    "prettier": "^2.8.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "uglify-js": "^3.17.4"
   }
 }
