--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "peerDependencies": {
     "graphql": "^16.6.0",
-    "react": "^18.2.0"
+    "react": ">=18.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
